Use Double and Float object caches